  properly, causing no radio buttons to be selected in the interface.
  This has been corrected. (RBL-3002)
* The jobmaster now copies /etc/hosts into jobslaves. (RBL-2963)
* The user settings page now contains fields for entering EC2 credentials.
  (RBL-3029)
* The backend now allows EC2 calls to be run using user supplied credentials.
  (RBL-3039)

Web Front End Changes
---------------------
* Fixed a bug where the cook group page mistakenly referenced the "Images" 
  link instead of the "Manage Images" link. (RBL-3014)


Changes in 4.1.0
================

Web Front End Changes
---------------------

* New rBuilder installations are created using PostgreSQL as the repository
  database.  Existing installations are given a new plugin that will migrate
  existing SQLite repositories to PostgreSQL.  (RBL-2650)
* Upgrades from versions before 4.0.0 will no longer be possible with
  this version. Installations predating 4.0.0 will need to first
  be upgraded to version 4.0.1, then to this version. (RBL-2884)
* External products configured for inbound mirroring can now be backed
  up. (RBL-2039)
* "Projects" are now referred to as "products" in rBuilder Appliance.
  (RBL-1641)
* "Builds" are now referred to as "images". (RBL-2645)
* The form for creating new products has been updated to ask for the product
  title, short name, type (appliance or component) and initial version number
  and the Repository Commits Email address. (RBL-2508, RBL-2590)
* rBuilder's initial setup page has a new option under "Repository Setup"
  to specify the namespace to be used by all products. (RBL-2564)
* New products will have an initial development label created in the format
  <shortname>.<domainname>@<namespace>:<shortname>-<version>-devel. (RBL-2508)
* A bug that prevented a group trove from being cooked more than one time
  by Group Builder has been corrected (rBuilder Online only). (RBL-2570)
* The Group Builder has been removed from rBuilder Appliance. (RBL-2514)